--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     display: flex;
     align-items: center;
-    text-align: center;
+    justify-content: center;
     background: linear-gradient(120deg, #9932CC, #ff2525da);
     height: 100vh; 
 }
