--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(120deg, #9932CC, #ff2525da,);
+    background: linear-gradient(120deg, #9932CC, #ff2525da);
     height: 100vh; 
 }
 
