--- a/style.css
+++ b/style.css
@@ -21,25 +21,27 @@ body{
     justify-content: space-around;
     height: 200px;
     width: 550px;
-    
+
     background: transparent;
     border-radius: 3px;
     box-shadow: 0px,8px,10px rgba(0, 0, 15, .5);
 }
 
 .relogio div {
-
     height: 170px;
     width: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     color: #fff;
-    background: rgba(5, 5, 5, 9);
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 7);
+    background: rgba(179, 0, 255, 0.9);
+    box-shadow: 5px 5px 15px rgba(115, 255, 0, 0.7);
     border-radius: 7px;
     letter-spacing: 3px;
 }
+
+
 
 .relogio span {
 
